Corrected a bug mice_module_bureacracy.tex, line 3, which broke section numbering later in the document. Some other chapters now have the number 0 in their headings, but that is due to their latex having subsections without enclosing sections

--- a/doc/doc_src/maus_user_guide.tex
+++ b/doc/doc_src/maus_user_guide.tex
@@ -49,7 +49,7 @@
 \input{mice_modules/mice_module_fields} % how to set up fields
 
 \include{detectors/tof}
-\include{detectors/tracker}
+\input{detectors/tracker}
 %\include{detectors/emr}
 %\include{detectors/ckov}
 %\include{detectors/kl}
