--- a/doc/doc_src/mice_modules/mice_module_bureaucracy.tex
+++ b/doc/doc_src/mice_modules/mice_module_bureaucracy.tex
@@ -1,6 +1,6 @@
 \newcommand\textsubscript[1]{\ensuremath{{}_{\text{#1}}}}
 % Outline numbering
-\setcounter{secnumdepth}{0}
+%\setcounter{secnumdepth}{0}
 \makeatletter
 \newcommand\arraybslash{\let\\\@arraycr}
 \makeatother
