More doc updates

--- a/doc/doc_src/detectors/tracker/06-CodeDesign/06-CodeDesign.tex
+++ b/doc/doc_src/detectors/tracker/06-CodeDesign/06-CodeDesign.tex
@@ -38,5 +38,7 @@ The backend classes for the final track fit are stored under \verb;src/common_cp
 \subsubsection{ReduceCppPatternRecognition}
 This reducer displays spacepoints and pattern recognition tracks by tracker, in the $x-y$, $x-z$ and $y-z$ projections.  It also creates an InfoBox, which displays various information for the spill and run, such as the number of clusters, spacepoints, etc.  The plots are made using ROOT TGraphs, and the InfoBox with a TPaveText. 
 
+\subsection{Tracker configuration variables}
+
 
 
