--- a/doc/doc_src/maus_user_guide.tex
+++ b/doc/doc_src/maus_user_guide.tex
@@ -65,7 +65,8 @@
 
 %\chapter{Appendix B: Spill Structure}
 %\include{spill_schema} % automatically constructed by build script
-%
+
+\input
 
 \end{document}
 
