More tracker doc updates

--- a/doc/doc_src/detectors/tracker/02-Definitions/02-Definitions.tex
+++ b/doc/doc_src/detectors/tracker/02-Definitions/02-Definitions.tex
@@ -42,11 +42,11 @@ closest to the optical patch panel. The scheme is summarised in table~\ref{Tab:S
 \subsection{Doublet layer}
 \label{SubSect:SciFiDblLyr}
 
-Each station consists of three ``doublet layers'' of 350\,$\mu$m scintillating fibres glued onto a carbon-fibre station body. The doublet layers are labelled $u$ (sometimes refered to also as $x$), $w$ and $v$.  The layers are arranged such that the fibres in one layer run at an angle of 120$^\circ$ to the fibres in each of the other layers as shown in figure \ref{Fig:DblLyr}a.   The arrangement of the fibres within a doublet layer is shown in figure \ref{Fig:DblLyr}b.   The configuration of the seven fibres ganged for readout via a single clear-fibre light-guide is also indicated. The construction of the doublet layer is described in \cite{TrackerPaper} along with the specification of the various materials of which it is composed.
+Each station consists of three ``doublet layers'' of 350\,$\mu$m scintillating fibres glued onto a carbon-fibre station body. The doublet layers are labelled $u$ (sometimes refered to also as $x$), $w$ and $v$.  The layers are arranged such that the fibres in one layer run at an angle of 120$^\circ$ to the fibres in each of the other layers as shown in figure \ref{Fig:DblLyr}a.   The arrangement of the fibres within a doublet layer is shown in figure \ref{Fig:DblLyr}b.   The configuration of the seven fibres ganged for readout via a single clear-fibre light-guide is also indicated. % The construction of the doublet layer is described in \cite{TrackerPaper} along with the specification of the various materials of which it is composed.
 \begin{figure}
-  \leftline{
+  \begin{center}
     \includegraphics[width=0.7\textwidth]{detectors/tracker/02-Definitions/Figures/doublet-layer.pdf}
-  }
+  \end{center}
   \caption{(a) Arrangement of the doublet layers in the scintillating-fibre  stations. The outer circle shows the solenoid bore while the inner circle shows the limit of the active area of the tracker. The grey, blue, and green regions indicate the direction that the individual 350\,$\mu$m fibres run (moving outward from the centre) in the $u$, $v$, and $w$ planes respectively. (b) Detail of the arrangement of the scintillating fibres in a doublet layer. The fibre spacing and the fibre pitch are indicated on the right-hand end of the figure in \,$\mu$m. The pattern of seven fibres ganged for readout in a single clear-fibre light-guide is shown in red. The sheet of Mylar glued to the doublet layer is indicated.}
   \label{Fig:DblLyr}
 \end{figure}
