--- a/doc/doc_src/detectors/tracker/03-Reference-surfaces-and-coordinate-systems/03-Reference-surfaces-and-coordinate-systems.tex
+++ b/doc/doc_src/detectors/tracker/03-Reference-surfaces-and-coordinate-systems/03-Reference-surfaces-and-coordinate-systems.tex
@@ -30,7 +30,7 @@ The station reference surface is defined to coincide with the reference surface 
 \subsection{Tracker}
 \label{SubSect:SciFiTrkrCoordStn}
 
-The tracker reference surface is defined to coincide with the reference surface of station 1. The tracker coordinate system is defined such that the $z_t$ axis coincides with the nominal axis of cylindrical symmetry of the tracker as shown in figure \ref{Fig:TrkRef&Coord}. The tracker $z_t$ coordinate increases from station 1 to station 5. The tracker $y_t$ axis is defined to coincide with the $y_s$ axis of station 1 and the tracker $x_t$ axis completes a right-handed coordinate system.
+The tracker reference surface is defined to coincide with the reference surface of station 1. The tracker coordinate system is defined such that the $z_t$ axis coincides with the nominal axis of cylindrical symmetry of the tracker as shown in figure~\ref{Fig:TrkRef&Coord}. The tracker $z_t$ coordinate increases from station 1 to station 5. The tracker $y_t$ axis is defined to coincide with the $y_s$ axis of station 1 and the tracker $x_t$ axis completes a right-handed coordinate system.
 
 \begin{figure}
   \begin{center}
