--- a/doc/doc_src/detectors/tracker/04-Reconstruction/04-02-Space-points/04-02-Space-points.tex
+++ b/doc/doc_src/detectors/tracker/04-Reconstruction/04-02-Space-points/04-02-Space-points.tex
@@ -10,7 +10,7 @@ For each particle event, the clusters found within each doublet layer are ordere
 \begin{equation}
  n^u + n^v + n^w = n^u_0 + n^v_0 + n^w_0 \, ;
 \end{equation}
-where $n^u$, $n^v$ and $n^w$ are the fibre numbers of the clusters in the $u$, $v$ and $w$ views respectively and $n^u_0$, $n^v_0$ and $n^w_0$ are the respective central-fibre numbers (see Appendix~\ref{App1Kuno}).
+where $n^u$, $n^v$ and $n^w$ are the fibre numbers of the clusters in the $u$, $v$ and $w$ views respectively and $n^u_0$, $n^v_0$ and $n^w_0$ are the respective central-fibre numbers (see Appendix~\ref{App:SciFiKuno}).
 
 A triplet space point is selected if:
 
@@ -46,7 +46,7 @@ where the measurement vector corresponding to the $i^{\rm th}$ cluster:
                \end{array}
               \right) \, ;
 \end{equation}
-and the rotation matrix $\underline{\underline{R}}_{SDi}$ are defined in section~\ref{HtsClstrs}. The simultaneous equations~\ref{Eq:DSP1} and \ref{Eq:DSP2} contain two unknowns, $\beta_1$ and $\beta_2$. Equations~\ref{Eq:DSP1} and \ref{Eq:DSP2} may be rewritten:
+and the rotation matrix $\underline{\underline{R}}_{SDi}$ are defined in section~\ref{SubSect:SciFiHtsClstrs}. The simultaneous equations~\ref{Eq:DSP1} and \ref{Eq:DSP2} contain two unknowns, $\beta_1$ and $\beta_2$. Equations~\ref{Eq:DSP1} and \ref{Eq:DSP2} may be rewritten:
 
 \begin{equation}
   {\bf m}_1 = \underline{\underline{R}}_{SD1}^{-1}
@@ -82,7 +82,9 @@ As shown in figure~\ref{Fig:SenseArea}, the fibres layout is of one of two types
 \end{eqnarray}
 
 \begin{figure}
+  \begin{center}
     \includegraphics[width=0.7\linewidth]{detectors/tracker/04-Reconstruction/04-02-Space-points/Figures/SpacepointError.pdf}
+  \end{center}
   \caption{Right panel: Fibre arrangement in station 5 of tracker 1. Left panel: Fibre arrangement in the rest of the stations. The shaded region shows the intersection of the three channels is triangle for every station other than station 5, where itwill be an hexagon.}
   \label{Fig:SenseArea}
 \end{figure}
