--- a/doc/doc_src/maus_user_guide.tex
+++ b/doc/doc_src/maus_user_guide.tex
@@ -66,7 +66,9 @@
 %\chapter{Appendix B: Spill Structure}
 %\include{spill_schema} % automatically constructed by build script
 
-\input
+\chapter{Appendix C: Tracker Appendices}
+\label{chapter:TrackerAppendices}
+\input{detectors/tracker/11-Appendices/11-Appendices}
 
 \end{document}
 
