--- a/doc/doc_src/detectors/tracker/06-CodeDesign/06-CodeDesign.tex
+++ b/doc/doc_src/detectors/tracker/06-CodeDesign/06-CodeDesign.tex
@@ -38,9 +38,71 @@ The backend classes for the final track fit are stored under \verb;src/common_cp
 \end{itemize}
 
 \subsubsection{ReduceCppPatternRecognition}
-This reducer displays spacepoints and pattern recognition tracks by tracker, in the $x-y$, $x-z$ and $y-z$ projections.  It also creates an InfoBox, which displays various information for the spill and run, such as the number of clusters, spacepoints, etc.  The plots are made using ROOT TGraphs, and the InfoBox with a TPaveText. 
+This reducer displays spacepoints and pattern recognition tracks by tracker, in the $x-y$, $x-z$ and $y-z$ projections, an example being shown in figure~\ref{Fig:SciFiReducerXYZ}.  It also creates an InfoBox, which displays various information for the spill and run, such as the number of clusters, spacepoints, etc.  The plots are made using ROOT TGraphs, and the InfoBox with a TPaveText. 
+
+\begin{figure}[htb]
+  \begin{center}
+    \includegraphics[width=0.8\textwidth]{detectors/tracker/06-CodeDesign/Figures/xyzPlotterOutput.pdf}
+  \end{center}
+  \caption{Output from the pattern recognition reducer showing the real space projections of a three event spill in tracker 2.}
+  \label{Fig:SciFiReducerXYZ}
+\end{figure}
 
 \subsection{Tracker configuration variables}
+
+\renewcommand{\arraystretch}{1.1}
+\begin{tabular}{| l | l | p{8cm} |}
+  \hline                       
+  \textbf{Variable} & \textbf{Default}& \textbf{Description}  \\
+  \hline
+  SciFiMUXNum & 7 & \\
+  SciFiFiberDecayConst & 2.7 & \\
+  SciFiFiberConvFactor & 3047.1 & \\
+  SciFiFiberTrappingEff & 0.056 & \\
+  SciFiFiberMirrorEff & 0.6 & \\
+  SciFiFiberTransmissionEff & 0.8 & \\
+  SciFiMUXTransmissionEff & 1.0 & \\
+  SciFivlpcQE & 0.8 & \\
+  SciFivlpcEnergyRes & 4.0 & VLPC energy resolution (MeV) \\
+  SciFivlpcTimeRes & 0.2 & VLPC time resolution (ns) \\
+  SciFiadcFactor & 6.0 & \\
+  SciFitdcBits & 16 & \\
+  SciFitdcFactor & 1.0 & \\
+  SciFinPlanes & 3 & \\
+  SciFinStations & 5 & \\
+  SciFinTrackers & 2 & \\
+  SciFiNPECut & 2.0 & \\
+  SciFiClustExcept & 100 & \\
+  SciFi\_sigma\_tracker0\_station5 & 0.4298 & Tracker 1 station 5 resolution (mm) \\
+  SciFi\_sigma\_triplet & 0.3844 & Spacepoint triplet resolution (mm) \\
+  SciFi\_sigma\_z & 0.081 & (mm) \\
+  SciFi\_sigma\_duplet & 0.6197 & (mm) \\
+  SciFiPRHelicalOn & True & Helical pattern recognition flag \\
+  SciFiPRStraightOn  & True & Straight pattern recognition flag \\
+  SciFiRadiusResCut & 150.0 & Helix radius cut (mm) \\
+  SciFiPerChanFlag & 0 & \\
+  SciFiNoiseFlag & 1.5 & \\
+  SciFiCrossTalkSigma & 50.0 & \\
+  SciFiCrossTalkAmplitude & 1.5 & \\
+  SciFiDarkCountProababilty & 0.017 & Probability of dark count due to thermal electrons \\
+  SciFiChannelCalibList & & Channel calibration data location \\
+  SciFiParams\_Z & 5.61291 & \\
+  SciFiParams\_Plane\_Width & 0.6523 & \\
+  SciFiParams\_Radiation\_Legth & 424.0 & \\
+  SciFiParams\_Density & 1.06 & \\
+  SciFiParams\_Mean\_Excitation\_Energy & 68.7 & \\
+  SciFiParams\_A & 104.15 & \\
+  SciFiParams\_Pitch & 1.4945 & \\
+  SciFiParams\_Station\_Radius & 160. & \\
+  SciFiParams\_RMS & 370. & \\
+  SciFiSeedCovariance & 1000 & Error estimate for seed values of the Kalman fit \\
+  SciFiKalman\_use\_MCS & True & Flag to add multiple scattering to the Kalman fit \\
+  SciFiKalman\_use\_Eloss & True & Flag to add energy loss to the Kalman fit \\
+  SciFiUpdateMisalignments & False & Do a misalignment search and update \\
+  SciFiKalmanVerbose & False & Dump information per fitted track \\
+  \hline  
+\end{tabular}
+\renewcommand{\arraystretch}{1.0}
 
 
 
