SciFi documentation update

--- a/doc/doc_src/detectors/tracker.tex
+++ b/doc/doc_src/detectors/tracker.tex
@@ -8,5 +8,5 @@
 \input{detectors/tracker/05-DataStructure/05-DataStructure}
 \input{detectors/tracker/06-CodeDesign/06-CodeDesign}
 % \input{detectors/tracker/07-ConfigDB/07-ConfigDB}
-% \input{detectors/tracker/08-MonteCarlo/08-MonteCarlo}
+\input{detectors/tracker/08-MonteCarlo/08-MonteCarlo}
 % \input{detectors/tracker/09-Performance/09-Performance}
