Fix envelope tool docs

--- a/doc/doc_src/envelope_tool.tex
+++ b/doc/doc_src/envelope_tool.tex
@@ -13,7 +13,7 @@ and then do
 
 \begin{verbatim}
 $ python ${MAUS_ROOT_DIR}/bin/utilities/envelope_tool/envelope_tool.py \
-  --configuration_file ${MAUS_ROOT_DIR/}bin/utilities/envelope_tool/share/pseudobeamline.py
+  --configuration_file ${MAUS_ROOT_DIR}/bin/utilities/envelope_tool/share/pseudobeamline.py
 \end{verbatim}
 
 \begin{figure}[!htb]
